<resources>
    <string name="app_name">수슐랭</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="suwon">수원대학교 정문</string>
    <string name="mapToolbarTitle">지도로 맛집 보기</string>
    <string name="listToolbarTitle">주변 맛집 보기</string>
    <string name="voteToolbarTitle">투표하기</string>
    <string name="voteSearchHint">찾고 싶은 가게를 입력해보세요.</string>
    <string name="search">검색</string>
    <string name="filterName">이름</string>
    <string name="filterGrade">등급</string>
    <string name="filterNew">신규</string>
    <string name="filterVote">투표한 가게</string>
    <string name="address">지도에서 위치 보기</string>
    <string name="menu">메뉴판</string>
    <string name="back">뒤로가기</string>
    <string name="storeImage">가게 사진</string>
    <string name="voteTitle">맛집 투표</string>
    <string name="voteDetail">맛집을 다른 사람에게 추천해주세요.</string>
    <string name="voteWarning">투표는 한 번만 가능합니다.</string>
    <string name="voteComplete">투표완료</string>
    <string name="info">가게 정보는 네이버지도 평점, 구글지도 평점, 카카오맵 평점을 참고했고, 에브리타임에 올라오는 가게들도 참고해서 리스트에 넣었습니다. \n\n가게에 대한 점수는 절대 수정하지 않고 있으며 앱 사용자의 선택으로만 수슐랭 등급이 결정됩니다. 1스타는 50점부터, 2스타는 100점부터, 3스타는 200점부터입니다. \n\n문의사항은 고객센터 아이콘을 눌러 이메일로 보내주세요.</string>
    <string name="contactMessage">내용을 입력하세요 \nex)..가게를 추가해주세요. \n..가 맛있어요, 분위기가 좋아요, 가성비가 좋아요\n..에서 ..하는 버그가 있습니다</string>
</resources>