<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Guide.suchelin.Vote.VoteFragment">

    <!-- toolbar -->
    <LinearLayout
        android:id="@+id/vote_toolbar_LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:elevation="2dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/leferipointspecial"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:text="@string/voteToolbarTitle"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!-- 검색하기 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="11dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/search_editbox"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/vote_search_editTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:background="@null"
                android:hint="@string/voteSearchHint"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="15sp"
                android:textColor="@color/black"
                android:textColorHint="@color/textGray"
                android:textSize="13sp"
                android:textStyle="bold"
                tools:ignore="NestedWeights" />

            <ImageView
                android:id="@+id/vote_search_imageView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/search"
                android:padding="10dp"
                android:src="@drawable/ic_search" />
        </LinearLayout>

    </LinearLayout>

    <!-- 필터 -->
    <LinearLayout
        android:id="@+id/vote_filter_LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="13dp"
        app:layout_constraintTop_toBottomOf="@+id/vote_toolbar_LinearLayout">

        <TextView
            android:id="@+id/sortNameVote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/filter_check_box"
            android:paddingHorizontal="16dp"
            android:paddingVertical="4dp"
            android:text="@string/filterName"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sortScoreVote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:background="@drawable/filter_uncheck_box"
            android:paddingHorizontal="16dp"
            android:paddingVertical="4dp"
            android:text="@string/filterGrade"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sortDistanceVote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/filter_uncheck_box"
            android:paddingHorizontal="16dp"
            android:paddingVertical="4dp"
            android:text="@string/filterNew"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sortSelectVoted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/filter_uncheck_box"
            android:paddingHorizontal="16dp"
            android:layout_marginStart="12dp"
            android:paddingVertical="4dp"
            android:text="@string/filterVote"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/vote_shadow_view"
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/white"
        android:elevation="2dp"
        app:layout_constraintTop_toBottomOf="@+id/vote_filter_LinearLayout" />

    <androidx.core.widget.NestedScrollView
        app:layout_constraintTop_toBottomOf="@+id/vote_shadow_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- 투표 총계 -->
            <TextView
                android:paddingStart="20dp"
                android:paddingVertical="10dp"
                android:id="@+id/vote_sum_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="총 투표자: 31명    내가 투표한 가게 : 3곳"
                android:textColor="@color/textGray"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvVote"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/filterBarVote" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>