<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/box_10_ractangle_white"
    android:paddingVertical="20dp"
    android:paddingHorizontal="30dp">

    <TextView
        android:id="@+id/vote_dialog_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/vote_dialog_cancel_imageView"
        app:layout_constraintBottom_toBottomOf="@+id/vote_dialog_cancel_imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_centerHorizontal="true"
        android:text="@string/voteTitle"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/vote_dialog_cancel_imageView"
        android:layout_width="17sp"
        android:layout_height="17sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_cancel" />

    <TextView
        android:id="@+id/vote_dialog_store_title_textView"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vote_dialog_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="20sp"
        tools:text="\u003C 와우당 \u003E"/>

    <TextView
        android:id="@+id/explain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vote_dialog_store_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/voteDetail"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <RatingBar
        android:id="@+id/rating"
        style="@style/Widget.AppCompat.RatingBar.Indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/explain"
        android:layout_marginTop="15dp"
        android:isIndicator="false"
        android:numStars="5"
        android:progressTint="#EDFFEB3B"
        android:rating="0"
        android:stepSize="1" />

    <TextView
        android:id="@+id/vote_dialog_complete_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating"
        android:layout_marginTop="20dp"
        android:text="@string/voteComplete"
        android:textColor="@color/blue"
        android:textSize="17sp"
        android:textStyle="bold" />
</androidx.constraintlayout.widget.ConstraintLayout>