<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pageList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Guide.suchelin.List.ListFragment">

    <!-- toolbar -->
    <LinearLayout
        android:id="@+id/listToolbarLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:elevation="2dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:fontFamily="@font/pretendardbold"
            android:gravity="center_vertical"
            android:paddingHorizontal="20dp"
            android:text="@string/listToolbarTitle"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:id="@+id/list_default_bar"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            >
            <ImageView
                android:id="@+id/list_iv_info"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="?actionBarSize"
                app:layout_constraintEnd_toStartOf="@+id/list_iv_contact"
                android:layout_height="?actionBarSize"
                android:src="@drawable/premiumiconinfo5258991" />
            <!--        <a href="https://www.flaticon.com/kr/free-icons/" title="정보 아이콘">정보 아이콘  제작자: SeyfDesigner - Flaticon</a>-->
            <ImageView
                android:layout_gravity="end"
                android:id="@+id/list_iv_contact"
                android:padding="13dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/list_search_imageView"
                android:layout_width="?actionBarSize"
                android:src="@drawable/customerservice"
                android:layout_height="?actionBarSize"/>
            <ImageView
                android:id="@+id/list_search_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/search"
                android:padding="14dp"
                android:src="@drawable/ic_search" />
        </androidx.constraintlayout.widget.ConstraintLayout>



        <!-- 검색하기 -->
        <LinearLayout
            android:layout_width="0dp"
            android:visibility="gone"
            android:layout_height="match_parent"
            android:layout_marginVertical="11dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/list_search_bar"
            android:layout_weight="6"
            android:background="@drawable/search_editbox"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/vote_search_editTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@null"
                android:hint="@string/voteSearchHint"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="15sp"
                android:textColor="@color/black"
                android:textColorHint="@color/textGray"
                android:textSize="13dp"
                android:textStyle="bold"
                tools:ignore="NestedWeights" />

            <ImageView
                android:id="@+id/list_search_imageView_clicked"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:contentDescription="@string/search"
                android:padding="10dp"
                android:src="@drawable/ic_search" />
        </LinearLayout>

    </LinearLayout>

<!-- 고객센터 아이콘   <a href="https://www.flaticon.com/kr/free-icons/-" title="- 아이콘">- 아이콘  제작자: Freepik - Flaticon</a>-->
    <!-- 내용 -->
    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/list_content_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/listToolbarLinearLayout">

        <!-- 필터 -->
        <LinearLayout
            android:id="@+id/list_filter_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            android:padding="13dp">

            <TextView
                android:id="@+id/list_filter_name_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/filter_check_box"
                android:paddingHorizontal="16dp"
                android:paddingVertical="4dp"
                android:text="@string/filterName"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/list_filter_grade_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:background="@drawable/filter_uncheck_box"
                android:paddingHorizontal="16dp"
                android:paddingVertical="4dp"
                android:text="@string/filterGrade"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/list_filter_distance_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/filter_uncheck_box"
                android:paddingHorizontal="16dp"
                android:paddingVertical="4dp"
                android:text="@string/filterNew"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:id="@+id/list_shadow_view"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_below="@+id/list_filter_parent"
            android:background="@color/white"
            android:elevation="2dp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/list_filter_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </RelativeLayout>

    <!-- 로딩중 -->
    <RelativeLayout
        android:id="@+id/list_loading_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/listToolbarLinearLayout">

        <ProgressBar
            android:id="@+id/list_loading_progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center" />
    </RelativeLayout>

</RelativeLayout>